<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            tools:context=".settingsFragment.SettingsFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/homeToolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="">

                <ImageView
                    android:id="@+id/settingsMenuIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"

                    android:src="@drawable/icon_menu" />

                <TextView
                    android:id="@+id/settingsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/sf_semi_bold"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/settingsImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_sunny"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeToolbar" />


            <LinearLayout
                android:id="@+id/settingsLanguageLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settingsImage">

                <ImageView
                    android:id="@+id/settingsLanguageIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/home_normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/icon_language"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <TextView
                    android:id="@+id/settingsLanguageText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_semi_bold"
                    android:gravity="start"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/settingsLanguageIcon"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <Spinner
                    android:id="@+id/settingsLanguageSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingsDivider1"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="@dimen/home_normal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/home_normal_margin"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsLanguageLinearLayout" />



            <LinearLayout
                android:id="@+id/settingsLocationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settingsLanguageLinearLayout">

                <ImageView
                    android:id="@+id/settingsLocationIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/home_normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/icon_location_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <TextView
                    android:id="@+id/settingsLocationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_semi_bold"
                    android:gravity="start"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/settingsLanguageIcon"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <Spinner
                    android:id="@+id/settingsLocationSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingsDivider2"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="@dimen/home_normal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/home_normal_margin"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsLocationLinearLayout" />





            <LinearLayout
                android:id="@+id/settingsWindLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settingsLocationLinearLayout">

                <ImageView
                    android:id="@+id/settingsWindIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/home_normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/icon_wind_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <TextView
                    android:id="@+id/settingsWindText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_semi_bold"
                    android:gravity="start"
                    android:text="@string/wind_speed_unit"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/settingsLanguageIcon"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <Spinner
                    android:id="@+id/settingsWindSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingsDivider3"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="@dimen/home_normal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/home_normal_margin"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsWindLinearLayout" />




            <LinearLayout
                android:id="@+id/settingsTemperatureLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_settings_elements"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settingsWindLinearLayout">

                <ImageView
                    android:id="@+id/settingsTemperatureIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/home_normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/icon_temperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <TextView
                    android:id="@+id/settingsTemperatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_between_settings_elements"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_semi_bold"
                    android:gravity="start"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/settingsLanguageIcon"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <Spinner
                    android:id="@+id/settingsTemperatureSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingsDivider4"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="@dimen/home_normal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/home_normal_margin"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsTemperatureLinearLayout" />



            <LinearLayout
                android:id="@+id/settingsNotificationsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_settings_elements"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/settingsTemperatureLinearLayout">

                <ImageView
                    android:id="@+id/settingsNotificationsIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/home_normal_margin"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/icon_notification2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <TextView
                    android:id="@+id/settingsNotificationsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_between_settings_elements"
                    android:layout_weight="3"
                    android:fontFamily="@font/sf_semi_bold"
                    android:gravity="start"
                    android:text="@string/notifications"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/settingsLanguageIcon"
                    app:layout_constraintTop_toBottomOf="@+id/settingsImage" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/settingsNotificationsSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="20dp"
                    app:thumbTint="@color/white"
                    android:backgroundTint="@color/white"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settingsDivider5"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="@dimen/home_normal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/home_normal_margin"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settingsNotificationsLinearLayout" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>